# IDSov_toolkit

./: .gitignore  README.md  citation.cff  environment.yml  nation_template.yaml  pyproject.toml
Forms/: community_consent_framework.md  data_sovereignty_statement.md  ieee_2890_compliance_checklist.xlsx  provenance_record.xlsx  tribal_data_catalog.xlsx
Notebooks/: 00_orientation.ipynb  01_frameworks.ipynb  02_data_provenance.ipynb  03_sovereignty_audit.ipynb  04_collection_design.ipynb  05_seeds_workflow.ipynb  06_adaptation_guide.ipynb
config/: nation.yaml
docs/: adaptation_guide.md  frameworks_reference.md  quickstart.md  tribal_data_sovereignty_whitepaper.docx  ~$ibal_data_sovereignty_whitepaper.docx
examples/: mining_twin.md  soils_geology.md  water_monitoring.md
toolkit/: __init__.py  audit.py  governance.py  provenance.py  sovereignty.py
